Fri Oct 10 15:54:00 2003  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/LexicalAnalyzer.hpp:
	* CCF/CCF/IDL2/LexicalAnalyzer.cpp:
	* CCF/CCF/IDL2/SyntaxTree/BuildIn.m4:
	* CCF/CCF/IDL2/SyntaxTree/BuildIn.hpp:
	* CCF/CCF/IDL2/SyntaxTree/BuildIn.hpp.m4:
	* CCF/CCF/IDL2/SyntaxTree/BuildIn.cpp:
	* CCF/CCF/IDL2/SyntaxTree/BuildIn.cpp.m4:
	* CCF/CCF/IDL2/Traversal/BuildIn.hpp:
	* CCF/CCF/IDL2/Traversal/BuildIn.hpp.m4:
	* CCF/Example/CIDL/LocalExecutorMapping/cidlc.cpp:
	* CCF/Example/CIDL/LocalExecutorMapping/test-2.idl:
	* CCF/Example/CIDL/LocalExecutorMapping/test-1_exec.idl.orig:
	* CCF/Example/CIDL/LocalExecutorMapping/test-2_exec.idl.orig:
	* CIDLC/cidlc.cpp: Added support for all built-in types (spec
	calls them 'base types') in CCF and in CIDL compiler driver.

	* CCF/Documentation/TODO: marked corresponding item as done.

Thu Oct 09 00:50:24 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* bin/generate_component_mpc.pl: Minor enhancement to the previous
	  change.  This script now allows an optional project name prefix
	  to be define via the [-u] flag.  If this flag is not used, the
	  dependent component's name will be used as project name prefix.
	  Since there are possibly many component depending on the same
	  component, using the depending componant name may not help much.
	  If neither -u and -p flag are used, no project name prefix will
	  be added (the redundant leading underscore from the previous
	  change has been removed.)

Fri Oct  6 10:00:12 2003  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Documentation/TODO: merged items from my off-line TODO.

Fri Oct 03 22:45:43 2003  Chris Cleeland  <cleeland@ociweb.com>

        * CIAO version 0.3.4 released.

Fri Oct 03 11:07:20 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* docs/releasenotes.html: Updated the release notes with more
	  recent news.

Fri Oct  3 08:14:26 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
